security/manager/ssl/src/SSLServerCertVerification.cpp
@@ -613,6 +613,7 @@ public:
   static SECStatus Dispatch(const void * fdForLogging,
                             TransportSecurityInfo * infoObject,
                             CERTCertificate * serverCert,
+                            SECItem * stapledOCSPResponse,
                             uint32_t providerFlags);
 private:
   NS_DECL_NSIRUNNABLE
@@ -621,22 +622,26 @@ private:
   SSLServerCertVerificationJob(const void * fdForLogging,
                                TransportSecurityInfo * infoObject, 
                                CERTCertificate * cert,
+                               SECItem * stapledOCSPResponse,
                                uint32_t providerFlags);
   const void * const mFdForLogging;
   const RefPtr<TransportSecurityInfo> mInfoObject;
   const ScopedCERTCertificate mCert;
   const uint32_t mProviderFlags;
   const TimeStamp mJobStartTime;
+  const ScopedSECItem mStapledOCSPResponse;
 };
 
 SSLServerCertVerificationJob::SSLServerCertVerificationJob(
     const void * fdForLogging, TransportSecurityInfo * infoObject,
-    CERTCertificate * cert, uint32_t providerFlags)
+    CERTCertificate * cert, SECItem * stapledOCSPResponse,
+    uint32_t providerFlags)
   : mFdForLogging(fdForLogging)
   , mInfoObject(infoObject)
   , mCert(CERT_DupCertificate(cert))
   , mProviderFlags(providerFlags)
   , mJobStartTime(TimeStamp::Now())
+  , mStapledOCSPResponse(SECITEM_DupItem(stapledOCSPResponse))
 {
 }
 
@@ -829,7 +834,7 @@ BlockServerCertChangeForSpdy(nsNSSSocketInfo *infoObject,
 
 SECStatus
 AuthCertificate(TransportSecurityInfo * infoObject, CERTCertificate * cert,
-                uint32_t providerFlags)
+                SECItem * stapledOCSPResponse, uint32_t providerFlags)
 {
   if (cert->serialNumber.data &&
       cert->issuerName &&
@@ -869,12 +874,21 @@ AuthCertificate(TransportSecurityInfo * infoObject, CERTCertificate * cert,
     }
   }
 
+  SECStatus rv;
+  if (stapledOCSPResponse) {
+    CERTCertDBHandle *handle = CERT_GetDefaultCertDB();
+    rv = CERT_CacheOCSPResponseFromSideChannel(handle, cert, PR_Now(),
+                                               stapledOCSPResponse,
+                                               infoObject);
+    if (rv != SECSuccess) {
+      return rv;
+    }
+  }
+
   CERTCertList *verifyCertChain = nullptr;
   SECOidTag evOidPolicy;
-  SECStatus rv = PSM_SSL_PKIX_AuthCertificate(cert, infoObject,
-                                              infoObject->GetHostName(),
-                                              &verifyCertChain,
-                                              &evOidPolicy);
+  rv = PSM_SSL_PKIX_AuthCertificate(cert, infoObject, infoObject->GetHostName(),
+                                    &verifyCertChain, &evOidPolicy);
 
   // We want to remember the CA certs in the temp db, so that the application can find the
   // complete chain at any time it might need it.
@@ -988,6 +1002,7 @@ AuthCertificate(TransportSecurityInfo * infoObject, CERTCertificate * cert,
 SSLServerCertVerificationJob::Dispatch(const void * fdForLogging,
                                        TransportSecurityInfo * infoObject,
                                        CERTCertificate * serverCert,
+                                       SECItem * stapledOCSPResponse,
                                        uint32_t providerFlags)
 {
   // Runs on the socket transport thread
@@ -999,7 +1014,7 @@ SSLServerCertVerificationJob::Dispatch(const void * fdForLogging,
   
   RefPtr<SSLServerCertVerificationJob> job(
     new SSLServerCertVerificationJob(fdForLogging, infoObject, serverCert,
-                                     providerFlags));
+                                     stapledOCSPResponse, providerFlags));
 
   nsresult nrv;
   if (!gCertVerificationThreadPool) {
@@ -1042,8 +1057,9 @@ SSLServerCertVerificationJob::Run()
   } else {
     // Reset the error code here so we can detect if AuthCertificate fails to
     // set the error code if/when it fails.
-    PR_SetError(0, 0); 
-    SECStatus rv = AuthCertificate(mInfoObject, mCert, mProviderFlags);
+    PR_SetError(0, 0);
+    SECStatus rv = AuthCertificate(mInfoObject, mCert, mStapledOCSPResponse,
+                                   mProviderFlags);
     if (rv == SECSuccess) {
       uint32_t interval = (uint32_t) ((TimeStamp::Now() - mJobStartTime).ToMilliseconds());
       Telemetry::ID telemetryID;
@@ -1164,24 +1180,6 @@ AuthCertificateHook(void *arg, PRFileDesc *fd, PRBool checkSig, PRBool isServer)
       return SECFailure;
   }
 
-  // This value of "now" is used both here for OCSP stapling and later
-  // when calling CreateCertErrorRunnable.
-  PRTime now = PR_Now();
-  // SSL_PeerStapledOCSPResponses will never return a non-empty response if
-  // OCSP stapling wasn't enabled because libssl wouldn't have let the server
-  // return a stapled OCSP response.
-  // We don't own this pointer.
-  const SECItemArray *csa = SSL_PeerStapledOCSPResponses(fd);
-  // we currently only support single stapled responses
-  if (csa && csa->len == 1) {
-      CERTCertDBHandle *handle = CERT_GetDefaultCertDB();
-      SECStatus cacheResult = CERT_CacheOCSPResponseFromSideChannel(
-          handle, serverCert, now, &csa->items[0], arg);
-      if (cacheResult != SECSuccess) {
-          return SECFailure;
-      }
-  }
-
   if (BlockServerCertChangeForSpdy(socketInfo, serverCert) != SECSuccess)
     return SECFailure;
 
@@ -1199,6 +1197,17 @@ AuthCertificateHook(void *arg, PRFileDesc *fd, PRBool checkSig, PRBool isServer)
     return SECFailure;
   }
 
+  // SSL_PeerStapledOCSPResponses will never return a non-empty response if
+  // OCSP stapling wasn't enabled because libssl wouldn't have let the server
+  // return a stapled OCSP response.
+  // We don't own these pointers.
+  const SECItemArray *csa = SSL_PeerStapledOCSPResponses(fd);
+  SECItem *stapledOCSPResponse = nullptr;
+  // we currently only support single stapled responses
+  if (csa && csa->len == 1) {
+    stapledOCSPResponse = &csa->items[0];
+  }
+
   uint32_t providerFlags = 0;
   socketInfo->GetProviderFlags(&providerFlags);
 
@@ -1210,8 +1219,8 @@ AuthCertificateHook(void *arg, PRFileDesc *fd, PRBool checkSig, PRBool isServer)
     // because of the performance benefits of doing so.
     socketInfo->SetCertVerificationWaiting();
     SECStatus rv = SSLServerCertVerificationJob::Dispatch(
-                           static_cast<const void *>(fd), socketInfo, serverCert,
-                           providerFlags);
+                     static_cast<const void *>(fd), socketInfo, serverCert,
+                     stapledOCSPResponse, providerFlags);
     return rv;
   }
   
@@ -1219,7 +1228,9 @@ AuthCertificateHook(void *arg, PRFileDesc *fd, PRBool checkSig, PRBool isServer)
   // thread doing the network I/O may not interrupt its network I/O on receipt
   // of our SSLServerCertVerificationResult event, and/or it might not even be
   // a non-blocking socket.
-  SECStatus rv = AuthCertificate(socketInfo, serverCert, providerFlags);
+
+  SECStatus rv = AuthCertificate(socketInfo, serverCert, stapledOCSPResponse,
+                                 providerFlags);
   if (rv == SECSuccess) {
     return SECSuccess;
   }
@@ -1228,7 +1239,7 @@ AuthCertificateHook(void *arg, PRFileDesc *fd, PRBool checkSig, PRBool isServer)
   if (error != 0) {
     RefPtr<CertErrorRunnable> runnable(CreateCertErrorRunnable(
                     error, socketInfo, serverCert,
-                    static_cast<const void *>(fd), providerFlags, now));
+                    static_cast<const void *>(fd), providerFlags, PR_Now()));
     if (!runnable) {
       // CreateCertErrorRunnable sets a new error code when it fails
       error = PR_GetError();
